# heritage-master

./: .env.example  .gitignore  CHANGELOG-2026-05-16.md  Dockerfile  LICENSE  README.md  docker-compose.yml  heritage_data.db  pyproject.toml  stream_result.txt  test_encoding.db
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: api-reference.md  contributing.md  functional-test-cases.md  master_quotes_template.md  project_features.html  quickstart.md  real_masters_distillation.md
docs/diagrams/: data-flow.excalidraw  intent-recognition.excalidraw  stategraph-flow.excalidraw  system-architecture.excalidraw
examples/: claude-code-config.json  cursor-config.json  demo.md
personas/: caizhengren.json  chagongfu.json  gaofenglian.json  wangxiuying.json  wushishizi.json  叶汉钟.json  叶汉钟.md  黄钦添.json  黄钦添.md
scripts/: build_dataset.py  build_graph.py  build_rag.py  distill_persona.py  init_infra.py  init_rag.py  migrate_data.py
tests/: conftest.py  test_api.py  test_builtin_expanded.py  test_context.py  test_cultivation.py  test_db_intent.py  test_e2e.py  test_forum.py  test_forum_full.py  test_heritage_search.py  test_imports.py  test_intent.py  test_intent_rules.py  test_knowledge.py  test_knowledge_full.py  test_langgraph_agent.py  test_master_prompt.py  test_memory.py  test_memory_full.py  test_metrics.py  test_middleware.py  test_misc.py  test_realtime.py  test_route.py  test_route_extended.py  test_route_planner.py  test_search.py  test_user_system.py  test_venue.py
web/: app.py  deps.py  exceptions.py  health.py  requirements.txt  schemas.py
(+320 files in other folders)
