[project]
name = "heritage-master"
version = "1.0.0"
description = "中国非物质文化遗产大师助手 - MCP Server"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "张耀俊"}]
keywords = ["heritage", "intangible-cultural-heritage", "mcp", "china", "culture"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.1.0",
    "langgraph-checkpoint-sqlite>=1.0.0",
]

[project.optional-dependencies]
rag = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
heritage-master = "heritage_master.server:main"

[project.urls]
Homepage = "https://github.com/solution-clound/heritage-master"
Repository = "https://github.com/solution-clound/heritage-master"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/heritage_master"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
